# siri-backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml
auth_api/: urls.py  views.py
siriapp/: asgi.py  settings.py  urls.py  wsgi.py
